styles.css
:root {
    --color-text: white;
    --color-background: #010101;
    --color-background-secondary: #111;
    --color-secondary: rgb(0 0 255);

    --text-small: 12pt;
    --text-medium: 16pt;
    --text-large: 20pt;

    --font-serif: Georgia, serif;
    --font-sans-serif: 'Inter', sans-serif;
    
    --page-width: 1200px;
    --radius: 4px;
    --border-width: 1px;
}

body {
    color: var(--color-text);
    background-color: var(--color-background);
    font-family: var(--font-sans-serif);
    margin: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
}
h1,
h2,
h3 {
    font-family: var(--font-sans-serif-bold);
    font-weight: 400;
}

a {
    color: var(--color-secondary);
    transition: ease-out 200ms;
}
a:hover {
    color: color-mix(in srgb, var(--color-secondary), var(--color-text) 30%);
}

header, footer, main {
    display: flex;
    background-color: var(--color-background);
    padding: 2rem;
    margin: auto;
    width: var(--page-width);
    font-weight: 200;
    line-height: 1.6;
    font-size: var(--text-medium);
    /* border-left: .25rem solid var(--color-secondary); */
}
header {
    flex-direction: column;
    padding-top: 0;
    padding-bottom: 0;
    margin-bottom: 0.5rem;
}
header #header-title {
    text-decoration: none;
    font-size: var(--text-small);
    color: var(--color-text);
}
#header-title h1 {
    font-family: var(--font-blocky);
    font-weight: 400;
}
main {
    flex-direction: column;
    flex-grow: 1;
}
footer {
    flex-direction: column;
    justify-content: center;
    /* align-items: center; */
}

img {
    width: 100%;
}

hr {
    height: var(--border-width);
    background-color: var(--color-secondary);
    border: none;
    width: 100%;
}

header > nav > ul {
    list-style: none;
    display: block;
    padding: 0;
}
.menu-item {
    display: inline;
    margin-right: 1rem;
}
.menu-item a:not(.menu-item a:hover) {
    text-decoration: none;
}

.blog-list__container {
    /* border: var(--border-width) solid var(--color-text); */
    flex-grow: 1;
}
.blog-list {
    padding: 0 1.5rem 0 2rem;
}
.blog-list__item {
    /* background-color: color-mix(in srgb, var(--color-secondary), var(--color-background) 30%); */
    /* border: var(--border-width) solid var(--color-secondary); */
    background-color: var(--color-background);
    color: var(--color-text);
    list-style-type: square;
    padding: 1rem;
    margin: 0.8rem 0;
    font-weight: 400;
    transition: 200ms ease-out;
    border-radius: 0 2rem 2rem 0;
}
.blog-list > a {
    text-decoration: none;
}
a > .blog-list__item:hover {
    box-shadow: inset var(--page-width) 0px 0px var(--color-background-secondary);
    color: var(--color-secondary);
}
.blog-list__item::marker {
    transition: 100ms ease-out;
    color: var(--color-secondary);
}
.blog-list__item:hover::marker {
    color: var(--color-text);
}

.button:hover {
    border-color: color-mix(in srgb, var(--color-secondary), white 20%);
}

/* Mobile styling */

@media screen and (max-width: 749px) {
    header, footer, main {
        width: calc(100% - 3rem);
        padding: 2rem 1.5rem;
    }
    header #header-title {
        font-size: calc(var(--text-small) - 25%);
    }
    #header-title h1 {
        font-family: var(--font-hyperbold);
    }

    .blog-list__item {
        font-size: var(--text-small);
    }
}

